--- a/VentUI.ui
+++ b/VentUI.ui
@@ -31,13 +31,6 @@
           <property name="leftMargin">
            <number>10</number>
           </property>
-          <item row="4" column="1">
-           <widget class="QPushButton" name="disconnect">
-            <property name="text">
-             <string>Disconnect</string>
-            </property>
-           </widget>
-          </item>
           <item row="2" column="0">
            <widget class="QLabel" name="label_2">
             <property name="text">
@@ -52,13 +45,24 @@
             </property>
            </widget>
           </item>
-          <item row="1" column="1">
-           <widget class="QComboBox" name="portsList"/>
-          </item>
-          <item row="1" column="0">
-           <widget class="QLabel" name="label">
+          <item row="3" column="1">
+           <widget class="QPushButton" name="connect">
             <property name="text">
-             <string>Vent Port</string>
+             <string>Connect</string>
+            </property>
+           </widget>
+          </item>
+          <item row="6" column="1">
+           <widget class="QPushButton" name="btninit">
+            <property name="text">
+             <string>Run Init</string>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="1">
+           <widget class="QPushButton" name="disconnect">
+            <property name="text">
+             <string>Disconnect</string>
             </property>
            </widget>
           </item>
@@ -72,17 +76,20 @@
           <item row="2" column="1">
            <widget class="QComboBox" name="monitoringPort"/>
           </item>
-          <item row="3" column="1">
-           <widget class="QPushButton" name="connect">
+          <item row="1" column="0">
+           <widget class="QLabel" name="label">
             <property name="text">
-             <string>Connect</string>
+             <string>Vent Port</string>
             </property>
            </widget>
           </item>
-          <item row="6" column="1">
-           <widget class="QPushButton" name="btninit">
+          <item row="1" column="1">
+           <widget class="QComboBox" name="portsList"/>
+          </item>
+          <item row="7" column="1">
+           <widget class="QPushButton" name="runloop">
             <property name="text">
-             <string>Run Init</string>
+             <string>Run Loop</string>
             </property>
            </widget>
           </item>
