--- a/VentUI.ui
+++ b/VentUI.ui
@@ -73,7 +73,7 @@
           <item row="7" column="1">
            <widget class="QPushButton" name="runloop">
             <property name="enabled">
-             <bool>true</bool>
+             <bool>false</bool>
             </property>
             <property name="minimumSize">
              <size>
@@ -102,7 +102,7 @@
           <item row="6" column="1">
            <widget class="QPushButton" name="btninit">
             <property name="enabled">
-             <bool>true</bool>
+             <bool>false</bool>
             </property>
             <property name="minimumSize">
              <size>
@@ -118,7 +118,7 @@
           <item row="4" column="1">
            <widget class="QPushButton" name="disconnect">
             <property name="enabled">
-             <bool>true</bool>
+             <bool>false</bool>
             </property>
             <property name="minimumSize">
              <size>
@@ -133,6 +133,9 @@
           </item>
           <item row="8" column="1">
            <widget class="QPushButton" name="gcodeshow">
+            <property name="enabled">
+             <bool>true</bool>
+            </property>
             <property name="minimumSize">
              <size>
               <width>0</width>
